# project/routes/auth.js
@@ -49,8 +49,8 @@ router.post("/login", async (req, res, next) => {
     }
 
     // Set cookie
+    req.session.username = user.username;
     req.session.user_id = user.user_id;
-    req.session.first_name = user.first_name;
 
 
     // return cookie
