# project/routes/search.js
@@ -9,16 +9,16 @@ router.get("/searchTeamByName/:team_name", async (req, res, next) => {
     try {
       const results = await team_utils.searchTeamByName(req.params.team_name);
       if (results.length == 0) {
-        if(req.session.user_id)
+        if(req.session.username)
           delete req.session.last_executed_query_results;
         res.send({ status: 204, message: "A team named " + req.params.team_name + " not found" });
       }
       else {
-        if(req.session.user_id) 
+        if(req.session.username) 
           req.session.last_executed_query_results = results;
         res.status(200).send(results);
       } 
-      if(req.session.user_id)
+      if(req.session.username)
         req.session.last_executed_query = [req.params.team_name]; 
     } catch (error) {
       next(error);
@@ -30,16 +30,16 @@ router.get("/searchPlayerByName/:player_name", async (req, res, next) => {
   try {
     const results = await players_utils.searchPlayerByName(req.params.player_name);
     if (results.length == 0) {
-      if(req.session.user_id)
+      if(req.session.username)
         delete req.session.last_executed_query_results;
       res.send({ status: 204, message: "A player named " + req.params.player_name + " not found" });
     }
     else {
-      if(req.session.user_id)
+      if(req.session.username)
         req.session.last_executed_query_results = results;
       res.status(200).send(results);
     }
-    if(req.session.user_id)
+    if(req.session.username)
       req.session.last_executed_query = [req.params.player_name];
   } catch (error) {
     next(error);
@@ -58,16 +58,16 @@ router.get("/searchPlayerByNameAndByPosition/player_name/:player_name/position_i
             relevant_players.push(results[i]);
       }
       if (relevant_players.length == 0) {
-        if(req.session.user_id)
+        if(req.session.username)
           delete req.session.last_executed_query_results;
         res.send({ status: 204, message: "search not found!" });
       }
       else {
-        if(req.session.user_id)
+        if(req.session.username)
           req.session.last_executed_query_results = relevant_players;
         res.status(200).send(relevant_players);
       }
-      if(req.session.user_id)
+      if(req.session.username)
         req.session.last_executed_query = [req.params.player_name,req.params.position_id];
     }  
   } catch (error) {
@@ -87,16 +87,16 @@ router.get("/searchPlayerByNameAndByTeam/player_name/:player_name/team_name/:tea
             relevant_players.push(results[i]);
       }
       if (relevant_players.length == 0) {
-        if(req.session.user_id)
+        if(req.session.username)
           delete req.session.last_executed_query_results;
         res.send({ status: 204, message: "search not found!" });
       }
       else {
-        if(req.session.user_id)
+        if(req.session.username)
           req.session.last_executed_query_results = relevant_players;
         res.status(200).send(relevant_players);
       }
-      if(req.session.user_id)
+      if(req.session.username)
         req.session.last_executed_query = [req.params.player_name,req.params.team_name]
     }
   } catch (error) {
