# project/routes/users.js
@@ -8,16 +8,22 @@ const players_utils = require("./utils/players_utils");
  * Authenticate all incoming requests by middleware
  */
 router.use(async function (req, res, next) {
-  if (req.session && req.session.user_id) {
-    DButils.execQuery("SELECT user_id FROM users")
+  console.log(req.session.username + " is in here");
+  if (req.session && req.session.username) {
+    DButils.execQuery("SELECT username FROM users")
       .then((users) => {
-        if (users.find((x) => x.user_id === req.session.user_id)) {
-          req.user_id = req.session.user_id;
+        if (users.find((x) => x.username === req.session.username)) {
+          req.username = req.session.username;
           next();
         }
       })
       .catch((err) => next(err));
   } else {
+    // console.log(req);
+    // console.log("------------");
+    // console.log(req.session);
+    // console.log("------------");
+    // console.log(req.session.username);
     res.sendStatus(401);
   }
 });
@@ -27,8 +33,8 @@ router.use(async function (req, res, next) {
  */
 router.get("/favoriteMatchesTop3", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
-    const favorite_matches = await users_utils.getTop3FutureFavoriteMatches(user_id);
+    const username = req.session.username;
+    const favorite_matches = await users_utils.getTop3FutureFavoriteMatches(username);
     if(favorite_matches.length==0){
       res.send({ status: 204, message: "no games found" });
     }
@@ -53,9 +59,9 @@ router.get("/favoriteMatchesTop3", async (req, res, next) => {
  */
 router.post("/favoritePlayers", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
+    const username = req.session.username;
     const player_id = req.body.playerId;
-    await users_utils.markPlayerAsFavorite(user_id, player_id);
+    await users_utils.markPlayerAsFavorite(username, player_id);
     res.status(201).send("The player successfully saved as favorite");
   } catch (error) {
     next(error);
@@ -67,8 +73,8 @@ router.post("/favoritePlayers", async (req, res, next) => {
  */
 router.get("/favoritePlayers", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
-    const player_ids = await users_utils.getFavoritePlayers(user_id);
+    const username = req.session.username;
+    const player_ids = await users_utils.getFavoritePlayers(username);
     let player_ids_array = [];
     player_ids.map((element) => player_ids_array.push(element.player_id)); //extracting the players ids into array
     const results = await players_utils.getPlayersInfo(player_ids_array);
@@ -82,8 +88,8 @@ router.get("/favoritePlayers", async (req, res, next) => {
 
 router.get("/favoriteMatches", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
-    const favorite_matches = await users_utils.getFavoriteMatches(user_id);
+    const username = req.session.username;
+    const favorite_matches = await users_utils.getFavoriteMatches(username);
     if(favorite_matches.length==0){
       res.send({ status: 204, message: "no games found" });
     }
@@ -100,9 +106,9 @@ router.get("/favoriteMatches", async (req, res, next) => {
 
 router.post("/addMatchToFavorite", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
+    const username = req.session.username;
     const match_id = req.body.match_id;
-    await users_utils.markMatchAsFavorite(user_id, match_id);
+    await users_utils.markMatchAsFavorite(username, match_id);
     res.status(201).send("The match successfully saved as favorite");
   } catch (error) {
     next(error);
