# project/routes/utils/users_utils.js
@@ -7,7 +7,8 @@ const match_utils = require("./match_utils");
   this function assumes that user only can add a future games to his favorites
   (The selection will be made solely from the table of future games)
  */
-async function markMatchAsFavorite(user_id, match_id) {
+async function markMatchAsFavorite(username, match_id) {
+
   const isoDateString = await DButils.execQuery(
     `select date_match from dbo.matches where match_id='${match_id}'`
   );
@@ -15,38 +16,38 @@ async function markMatchAsFavorite(user_id, match_id) {
   const mySQLDateString2 = isoDate.toJSON().slice(0, 19);
 
   await DButils.execQuery(
-  `insert into dbo.favorite_matches values ('${user_id}','${match_id}','${mySQLDateString2}')`
+  `insert into dbo.favorite_matches values ('15','${match_id}','${mySQLDateString2}', '${username}')`
   );
 }
 
-async function markPlayerAsFavorite(user_id, player_id) {
+async function markPlayerAsFavorite(username, player_id) {
   await DButils.execQuery(
-    `insert into FavoritePlayers values ('${user_id}',${player_id})`
+    `insert into FavoritePlayers values ('${username}',${player_id})`
   );
 }
 
-async function getFavoritePlayers(user_id) {
+async function getFavoritePlayers(username) {
   const player_ids = await DButils.execQuery(
-    `select player_id from FavoritePlayers where user_id='${user_id}'`
+    `select player_id from FavoritePlayers where username='${username}'`
   );
   return player_ids;
 }
 
-async function getTop3FutureFavoriteMatches(user_id) {
+async function getTop3FutureFavoriteMatches(username) {
   const matches_ids = await DButils.execQuery(
-    `select top 3 match_id from dbo.favorite_matches where user_id='${user_id}' 
+    `select top 3 match_id from dbo.favorite_matches where username='${username}' 
     and date_match >= CAST(CURRENT_TIMESTAMP AS datetime) ORDER BY 
     CONVERT(DateTime, date_match ,101)`
   );
   return matches_ids;
 }
 
-async function getFavoriteMatches(user_id) {
-  await DButils.execQuery(`delete from dbo.favorite_matches where user_id='${user_id}' 
+async function getFavoriteMatches(username) {
+  await DButils.execQuery(`delete from dbo.favorite_matches where username='${username}' 
     and date_match < CAST(CURRENT_TIMESTAMP AS datetime)`);
 
   const matches_ids = await DButils.execQuery(
-    `select match_id from dbo.favorite_matches where user_id='${user_id}' 
+    `select match_id from dbo.favorite_matches where username='${username}' 
     ORDER BY CONVERT(DateTime, date_match ,101)`
   );
   return matches_ids;
